Titlebar handling fix

--- a/Pixed.Application/Windows/MainWindow.axaml
+++ b/Pixed.Application/Windows/MainWindow.axaml
@@ -8,9 +8,10 @@
         mc:Ignorable="d" Height="600" Width="800"
         x:Class="Pixed.Application.Windows.MainWindow"
         WindowStartupLocation="CenterScreen"
-		Padding="6"
-        ExtendClientAreaTitleBarHeightHint="46"
+		    Padding="6"
         ExtendClientAreaToDecorationsHint="True"
+        ExtendClientAreaChromeHints="NoChrome"
+        ExtendClientAreaTitleBarHeightHint="-1"
         WindowState="Maximized"
         Icon="avares://Pixed.Application/Resources/icon.ico"
         Title="Pixed"
