--- a/Pixed.Application/Controls/TitleBar.axaml
+++ b/Pixed.Application/Controls/TitleBar.axaml
@@ -6,36 +6,122 @@
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="Pixed.Application.Controls.TitleBar"
 			 DockPanel.Dock="Top">
-	<ScrollViewer AllowAutoHide="True" VerticalScrollBarVisibility="Disabled" HorizontalScrollBarVisibility="Auto">
-		<Grid
+  <Grid
             x:Name="titleBar"
             Grid.Row="0"
             ColumnDefinitions="Auto,Auto,*,Auto" RowDefinitions="46">
-			<Image
-				x:Name="icon"
-				Grid.Column="0"
-				Width="24"
-				Height="24"
-				Margin="5,0,0,0"
-				HorizontalAlignment="Center"
-				VerticalAlignment="Center"
-				IsVisible="{OnPlatform Default=False,
+    <Image
+      x:Name="icon"
+      Grid.Column="0"
+      Width="24"
+      Height="24"
+      Margin="5,0,0,0"
+      HorizontalAlignment="Center"
+      VerticalAlignment="Center"
+      IsVisible="{OnPlatform Default=False,
                                        Windows=True}"
-				Source="avares://Pixed.Application/Resources/icon.png" />
+      Source="avares://Pixed.Application/Resources/icon.png" />
 
-			<DockPanel Grid.Column="1" HorizontalAlignment="Left">
-				<Menu VerticalAlignment="Center" DockPanel.Dock="Left" ItemsSource="{Binding Menu, RelativeSource={RelativeSource FindAncestor, AncestorType=local:TitleBar}}"/>
-			</DockPanel>
-			<TextBlock Text="{Binding Title, RelativeSource={RelativeSource FindAncestor, AncestorType=local:TitleBar}}"
-					 FontSize="14"
-					 FontWeight="Bold"
-					 Foreground="White"
-					 HorizontalAlignment="Center"
-					 TextAlignment="Center"
-					 VerticalAlignment="Center"
-					 IsHitTestVisible="False"
-					 Grid.Column="2"/>
-			<Grid Width="140" Grid.Column="3" IsVisible="{OnPlatform Windows=True, Default=False}"/>
-		</Grid>
-	</ScrollViewer>
+    <DockPanel Grid.Column="1" HorizontalAlignment="Left">
+      <Menu VerticalAlignment="Center" DockPanel.Dock="Left" ItemsSource="{Binding Menu, RelativeSource={RelativeSource FindAncestor, AncestorType=local:TitleBar}}"/>
+    </DockPanel>
+    <TextBlock Text="{Binding Title, RelativeSource={RelativeSource FindAncestor, AncestorType=local:TitleBar}}"
+         FontSize="14"
+         FontWeight="Bold"
+         Foreground="White"
+         HorizontalAlignment="Center"
+         TextAlignment="Center"
+         VerticalAlignment="Center"
+         IsHitTestVisible="False"
+         Grid.Column="2"/>
+    <Grid Width="138" Grid.Column="3" IsVisible="{OnPlatform Windows=True, Default=False}">
+      <Grid.ColumnDefinitions>
+        <ColumnDefinition Width="*"/>
+        <ColumnDefinition Width="*"/>
+        <ColumnDefinition Width="*"/>
+      </Grid.ColumnDefinitions>
+      
+      <Button Width="46"
+				  VerticalAlignment="Stretch"
+          HorizontalContentAlignment="Center"
+          BorderThickness="0"
+          Name="minimizeButton"
+          ToolTip.Tip="Minimize">
+        <Button.Resources>
+          <CornerRadius x:Key="ControlCornerRadius">0</CornerRadius>
+        </Button.Resources>
+        <Button.Styles>
+          <Style Selector="Button:pointerover /template/ ContentPresenter#PART_ContentPresenter">
+            <Setter Property="Background" Value="#44AAAAAA"/>
+          </Style>
+          <Style Selector="Button:not(:pointerover) /template/ ContentPresenter#PART_ContentPresenter">
+            <Setter Property="Background" Value="Transparent"/>
+          </Style>
+        </Button.Styles>
+        <Path Margin="10,0,10,0"
+              Stretch="Uniform"
+              VerticalAlignment="Center"
+              Fill="{DynamicResource SystemControlForegroundBaseHighBrush}"
+              Data="M2048 1229v-205h-2048v205h2048z"></Path>
+      </Button>
+
+      <Button Width="46"
+              VerticalAlignment="Stretch"
+              BorderThickness="0"
+              Name="maximizeButton"
+              Grid.Column="1">
+        <ToolTip.Tip>
+          <ToolTip Content="Maximize"
+                   Name="maximizeToolTip"></ToolTip>
+        </ToolTip.Tip>
+
+        <Button.Resources>
+          <CornerRadius x:Key="ControlCornerRadius">0</CornerRadius>
+        </Button.Resources>
+        <Button.Styles>
+          <Style Selector="Button:pointerover /template/ ContentPresenter#PART_ContentPresenter">
+            <Setter Property="Background" Value="#44AAAAAA"/>
+          </Style>
+          <Style Selector="Button:not(:pointerover) /template/ ContentPresenter#PART_ContentPresenter">
+            <Setter Property="Background" Value="Transparent"/>
+          </Style>
+        </Button.Styles>
+        <Path Margin="10,0,10,0"
+              Stretch="Uniform"
+              Fill="{DynamicResource SystemControlForegroundBaseHighBrush}"
+              Name="maximizeIcon"
+              VerticalAlignment="Center"
+              Data="M2048 2048v-2048h-2048v2048h2048zM1843 1843h-1638v-1638h1638v1638z"></Path>
+      </Button>
+
+      <Button Width="46"
+              VerticalAlignment="Stretch"
+              BorderThickness="0"
+              Name="closeButton"
+              ToolTip.Tip="Close"
+              Grid.Column="2">
+        <Button.Resources>
+          <CornerRadius x:Key="ControlCornerRadius">0</CornerRadius>
+        </Button.Resources>
+        <Button.Styles>
+          <Style Selector="Button:pointerover /template/ ContentPresenter#PART_ContentPresenter">
+            <Setter Property="Background" Value="Red"/>
+          </Style>
+          <Style Selector="Button:not(:pointerover) /template/ ContentPresenter#PART_ContentPresenter">
+            <Setter Property="Background" Value="Transparent"/>
+          </Style>
+          <Style Selector="Button:pointerover > Path">
+            <Setter Property="Fill" Value="White"/>
+          </Style>
+          <Style Selector="Button:not(:pointerover) > Path">
+            <Setter Property="Fill" Value="{DynamicResource SystemControlForegroundBaseHighBrush}"/>
+          </Style>
+        </Button.Styles>
+        <Path Margin="10,0,10,0"
+              Stretch="Uniform"
+              VerticalAlignment="Center"
+              Data="M1169 1024l879 -879l-145 -145l-879 879l-879 -879l-145 145l879 879l-879 879l145 145l879 -879l879 879l145 -145z"></Path>
+      </Button>
+    </Grid>
+  </Grid>
 </UserControl>
