--- a/Pixed.Application/App.axaml
+++ b/Pixed.Application/App.axaml
@@ -24,6 +24,7 @@
           <ResourceInclude Source="/Themes/ToolRadio.axaml"/>
           <ResourceInclude Source="/Themes/ToolRadioCustom.axaml"/>
 		  <ResourceInclude Source="/Themes/TopLevelMenuItem.axaml"/>
+          <ResourceInclude Source="avares://LoadingIndicators.Avalonia/LoadingIndicators.axaml" />
         </ResourceDictionary.MergedDictionaries>
       </ResourceDictionary>
     </Application.Resources>
@@ -31,7 +32,6 @@
 	  <SimpleTheme/>
 	  <templates:PixiPerfectColorPickerTheme />
     <FluentTheme />
-	  <StyleInclude Source="avares://AvaloniaProgressRing/Styles/ProgressRing.xaml"/>
 	  <StyleInclude Source="/Styles.axaml"/>
     <StyleInclude Source="avares://AvaloniaInside.Shell/Default.axaml"></StyleInclude>
   </Application.Styles>
