--- a/Pixed.Application/Controls/PaintCanvas/PaintControl.axaml
+++ b/Pixed.Application/Controls/PaintCanvas/PaintControl.axaml
@@ -25,9 +25,10 @@
           <zoom:ZoomControl Name="zoomControl" GesturesEnabled="{Binding GestureZoomEnabled, Mode=TwoWay}" ZoomWidth="{Binding GridWidth, Mode=TwoWay}" ZoomHeight="{Binding GridHeight, Mode=TwoWay}">
             <zoom:ZoomControl.ZoomContent>
               <paintCanvas:TransparentBackground IsHitTestVisible="False" Width="{Binding ScaledGridWidth}" Height="{Binding ScaledGridHeight}" Name="transparentBackground"/>
-              <paintCanvas:PaintContainer Name="image" RenderOptions.BitmapInterpolationMode="None" Source="{Binding RenderModel}"/>
+              <paintCanvas:PaintContainer Name="image" RenderOptions.BitmapInterpolationMode="None" Source="{Binding CurrentFrame}"/>
               <paintCanvas:GridOverlay Width="{Binding ScaledGridWidth}" Height="{Binding ScaledGridHeight}" Name="gridCanvas" IsHitTestVisible="False"/>
               <paintCanvas:SelectionOverlay Width="{Binding ScaledGridWidth}" Height="{Binding ScaledGridHeight}" Name="selectionOverlay" IsHitTestVisible="False"/>
+			  <paintCanvas:CursorOverlay Width="{Binding ScaledGridWidth}" Height="{Binding ScaledGridHeight}" Name="cursorOverlay"/>
             </zoom:ZoomControl.ZoomContent>
           </zoom:ZoomControl>
         </Border>
