--- a/Pixed.Application/Controls/PaintCanvas/PaintControl.axaml
+++ b/Pixed.Application/Controls/PaintCanvas/PaintControl.axaml
@@ -51,7 +51,7 @@
     </Button>
     <StackPanel Grid.Row="1" Orientation="Horizontal" Spacing="5" Margin="4">
       <TextBlock Text="Tool size" VerticalAlignment="Center"/>
-      <NumericUpDown Minimum="1" Maximum="20" Value="{Binding ToolSize, Mode=TwoWay}" Width="105" FormatString="0" Increment="1"/>
+      <local:ExtendedNumeric Minimum="1" Maximum="20" Value="{Binding ToolSize, Mode=TwoWay}" Width="105" FormatString="0" Increment="1"/>
       <TextBlock Text="{Binding ProjectSizeText}" VerticalAlignment="Center" Margin="10,0,0,0"/>
       <TextBlock Text="{Binding MouseCoordinatesText}" VerticalAlignment="Center"/>
       <TextBlock Text="{Binding ZoomText}" VerticalAlignment="Center" Margin="0,0,10,0"/>
