--- a/Pixed.Application/Pages/ExportPNG.axaml
+++ b/Pixed.Application/Pages/ExportPNG.axaml
@@ -4,12 +4,13 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Pixed.Application.Pages"
+		xmlns:controls="clr-namespace:Pixed.Application.Controls;assembly=Pixed.Application"
         mc:Ignorable="d"
         Title="Export tileset to PNG">
   <local:Modal.Dialog>
     <StackPanel>
       <TextBlock Text="Columns count:" Margin="10"/>
-      <NumericUpDown Margin="10" Value="{Binding ColumnsCount, RelativeSource={RelativeSource FindAncestor, AncestorType=local:ExportPNG}, Mode=TwoWay}" Minimum="1"/>
+      <controls:ExtendedNumeric Margin="10" Value="{Binding ColumnsCount, RelativeSource={RelativeSource FindAncestor, AncestorType=local:ExportPNG}, Mode=TwoWay}" Minimum="1"/>
       <Button Content="OK" Click="Button_Click"
           Height="24" MinWidth="80" Padding="10,0" Margin="10"/>
     </StackPanel>
