--- a/Pixed.Application/Pages/GridSettings.axaml
+++ b/Pixed.Application/Pages/GridSettings.axaml
@@ -12,9 +12,9 @@
       <TextBlock Text="Grid color:" Margin="10"/>
       <controls:FixedPortableColorPicker Width="100" Height="32" SelectedColor="{Binding GridColor, RelativeSource={RelativeSource FindAncestor, AncestorType=local:GridSettings}, Mode=TwoWay}" x:Name="colorPicker"/>
       <TextBlock Text="Width:" Margin="10"/>
-      <NumericUpDown Margin="10" Value="{Binding WidthValue, RelativeSource={RelativeSource FindAncestor, AncestorType=local:GridSettings}, Mode=TwoWay}" Minimum="1"/>
+      <controls:ExtendedNumeric Margin="10" Value="{Binding WidthValue, RelativeSource={RelativeSource FindAncestor, AncestorType=local:GridSettings}, Mode=TwoWay}" Minimum="1"/>
       <TextBlock Text="Height:" Margin="10"/>
-      <NumericUpDown Margin="10" Value="{Binding HeightValue, RelativeSource={RelativeSource FindAncestor, AncestorType=local:GridSettings}, Mode=TwoWay}" Minimum="1"/>
+	  <controls:ExtendedNumeric Margin="10" Value="{Binding HeightValue, RelativeSource={RelativeSource FindAncestor, AncestorType=local:GridSettings}, Mode=TwoWay}" Minimum="1"/>
       <Button Content="OK" Click="Button_Click"
         Height="24" MinWidth="80" Padding="10,0" Margin="10"/>
     </StackPanel>
