--- a/Pixed.Application/Pages/OpenPNG.axaml
+++ b/Pixed.Application/Pages/OpenPNG.axaml
@@ -3,6 +3,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Pixed.Application.Pages;assembly=Pixed.Application"
+		xmlns:controls="clr-namespace:Pixed.Application.Controls;assembly=Pixed.Application"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="Pixed.Application.Pages.OpenPNG"
         Title="Open PNG">
@@ -12,9 +13,9 @@
       <RadioButton GroupName="pngType" Content="Tileset" Name="tileset" IsCheckedChanged="RadioButton_IsCheckedChanged" Margin="10"/>
       <StackPanel>
         <TextBlock Text="Tile Width:" Margin="10"/>
-        <NumericUpDown Margin="10" Minimum="1" Name="tileWidth" Value="16" Width="200"/>
+		<controls:ExtendedNumeric Margin="10" Minimum="1" Name="tileWidth" Value="16" Width="200"/>
         <TextBlock Text="Tile Height:" Margin="10"/>
-        <NumericUpDown Margin="10" Minimum="1" Name="tileHeight" Value="16" Width="200"/>
+		<controls:ExtendedNumeric Margin="10" Minimum="1" Name="tileHeight" Value="16" Width="200"/>
       </StackPanel>
       <Button Content="OK" Click="Button_Click"
           Height="24" MinWidth="80" Padding="10,0" Margin="10"/>
