--- a/Pixed.Application/Pages/OpenSVG.axaml
+++ b/Pixed.Application/Pages/OpenSVG.axaml
@@ -10,9 +10,9 @@
 	<local:Modal.Dialog>
 		<StackPanel>
 			<TextBlock Text="Width:" Margin="10"/>
-			<NumericUpDown Margin="10" Value="{Binding WidthValue, RelativeSource={RelativeSource FindAncestor, AncestorType=local:OpenSVG}, Mode=TwoWay}" Minimum="1"/>
+			<controls:ExtendedNumeric Margin="10" Value="{Binding WidthValue, RelativeSource={RelativeSource FindAncestor, AncestorType=local:OpenSVG}, Mode=TwoWay}" Minimum="1"/>
 			<TextBlock Text="Height:" Margin="10"/>
-			<NumericUpDown Margin="10" Value="{Binding HeightValue, RelativeSource={RelativeSource FindAncestor, AncestorType=local:OpenSVG}, Mode=TwoWay}" Minimum="1"/>
+			<controls:ExtendedNumeric Margin="10" Value="{Binding HeightValue, RelativeSource={RelativeSource FindAncestor, AncestorType=local:OpenSVG}, Mode=TwoWay}" Minimum="1"/>
 			<Button Content="OK" Click="Button_Click"
 			  Height="24" MinWidth="80" Padding="10,0" Margin="10"/>
 		</StackPanel>
