--- a/Pixed.Application/Routing/RouterControl.axaml
+++ b/Pixed.Application/Routing/RouterControl.axaml
@@ -30,5 +30,7 @@
     <Route Path="openPng" Page="windows:OpenPNG" Type="Modal"/>
 	<Route Path="openSvg" Page="windows:OpenSVG" Type="Modal"/>
 	<Route Path="loadLayer" Page="windows:LoadLayer" Type="Modal"/>
+    <Route Path="sendProject" Page="windows:ProjectSend" Type="Modal"/>
+      <Route Path="receiveProject" Page="windows:ProjectReceive" Type="Modal"/>
   </ShellView>
 </UserControl>
