Tcp Transfer now is working; TODO bluetooth transfer

--- a/Pixed.Application/Routing/RouterControl.axaml
+++ b/Pixed.Application/Routing/RouterControl.axaml
@@ -31,6 +31,8 @@
 	<Route Path="openSvg" Page="windows:OpenSVG" Type="Modal"/>
 	<Route Path="loadLayer" Page="windows:LoadLayer" Type="Modal"/>
     <Route Path="sendProject" Page="windows:ProjectSend" Type="Modal"/>
-      <Route Path="receiveProject" Page="windows:ProjectReceive" Type="Modal"/>
+    <Route Path="receiveProject" Page="windows:ProjectReceive" Type="Modal"/>
+    <Route Path="sendBluetooth" Page="windows:ProjectSendBluetooth" Type="Modal"/>
+    <Route Path="receiveBluetooth" Page="windows:ProjectReceiveBluetooth" Type="Modal"/>
   </ShellView>
 </UserControl>
